Fixed problem with image scale on iphone 5 and smaller devices.

--- a/docroot_gt16/default.css
+++ b/docroot_gt16/default.css
@@ -250,6 +250,10 @@ a:hover {
     clear: left;
 }
 
+#page {
+
+}
+
 #tempotime {
     position: relative;
     width: 460px;
